--- a/static/base.scss
+++ b/static/base.scss
@@ -36,6 +36,9 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active
+#inputId:-webkit-autofill {
+  background-color: transparent !important;
+}
 
 // ? Colors for namehis links
 a{color:royalblue}
