DANGER: Guilds, ranks, others currently broken. Cosmetic fixes.

--- a/static/base.scss
+++ b/static/base.scss
@@ -26,6 +26,9 @@ footer{text-align:center;bottom:0}
 .namehistable {
   max-height: 80vh;
 }
+// .tablinks: {
+//   background-color:grey;
+// }
 
 ::-webkit-scrollbar{width:10px}
 ::-webkit-scrollbar-track{background:transparent}
