MAYBE: fixed a bunch of formatting errors, header, footer, privacy policy and about pages ahve started existing

--- a/static/base.scss
+++ b/static/base.scss
@@ -44,9 +44,9 @@ input:-webkit-autofill:active
 }
 
 // ? Colors for namehis links
-a{color:royalblue}
-.nhfirst{color:#87afeb}
-.nhmiddle{color:cornflowerblue}
+// a{color:royalblue}
+// .nhfirst{color:#87afeb}
+// .nhmiddle{color:cornflowerblue}
 /*                  ,,                          
                  `7MM                          
                    MM                          
