--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,11 @@
                             {% if value|int != 0 %}
                                 <td><b>{{ value }}</b></td>
                             {% elif value == namehis[0]['name'] %}
-                                <td style="color:midnightblue"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                                <td><a href="/p/{{ value }}" style="text-decoration:none;color:#004D55" >{{ value }}</a></td>
                             {% elif value == namehis[namehis|length-1]['name'] %}
-                                <td style="color:rgb(135, 170, 235)"><a class="nhfirst" href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                                <td><a class="nhfirst" href="/p/{{ value }}" style="text-decoration:none;color:#00D7EF">{{ value }}</a></td>
                             {% elif value in dict_item['name'] %}
-                                <td style="color:rgb(107, 137, 221)"><a class="nhmiddle" href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                                <td><a class="nhmiddle" href="/p/{{ value }}" style="text-decoration:none;color:#0092A2" >{{ value }}</a></td>
                             {% else %}
                                 <td>{{ value }}</td>
                             {% endif %}
@@ -916,9 +916,9 @@
         <div class="col-start-2 col-end-10 bg-gray-100 rounded-2xl text-4xl font-bold p-6 shadow text-center">BedWars</div>
             
             <!-- Overall -->
-            <div class="col-start-2 col-end-4 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
+            <div class="col-start-2 col-end-4 bg-gray-100 rounded-2xl p-6 shadow">
                 <div class="text-3xl font-semibold pb-5">Overall</div>
-                <p class='pt-5'>
+                <p>
                     <b><span class="{{bwOverallStats['prestige'][1]}}">
                         [{{bwOverallStats['level']| those}}☆]
                     </span></b>
@@ -961,84 +961,97 @@
 
             <!-- BedWars by mode -->
             <div class="col-start-4 col-end-10 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
-                <div class="text-3xl font-semibold pb-5">BedWars - by Mode</div>
-                <div class='pt-5'>
-                    {% if bwOverallStats['games_played_bedwars'] > 0 %}
+                <!-- <div class="text-3xl font-semibold pb-5">BedWars - by Mode</div> -->
+                {% if bwOverallStats['games_played_bedwars'] > 0 %}
+                    <div class='pb-5'>
                         {% if bwMKWList[3] != '' and bwMKWList[4] != '' and bwMKWList[5] != '' %}
                             <p>{{username}} plays <b>{{bwMKWList[3]}}</b> the most, has the highest K/D in <b>{{bwMKWList[4]}}</b>, and has the highest W/L in <b>{{bwMKWList[5]}}</b>.
                         {% endif %}
-                        <div class='flex gap-4'>
-                            <div class='tabsBedWarsModes'>
-                                {% for mode in bwModeStats %}
-                                    {% if bwModeStats[mode]['games_played_bedwars'][0] > 0 %}
-                                        <button class="bwTabLinks text-2xl text-gray-600 font-bold leading-none p-1 mb-2 rounded-lg bg-gray-200 focus:bg-gray-300 focus:outline-none hover:bg-gray-300" onclick="bwTabs(event, '{{mode}}')" id="defaultOpenBw">{{bwTranslateList[mode]}}</button><br>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
+                    </div>
+                    <div class='flex gap-4 pt-5'>
+                        <div class='tabsBedWarsModes'>
                             {% for mode in bwModeStats %}
                                 {% if bwModeStats[mode]['games_played_bedwars'][0] > 0 %}
-                                    <div id='{{mode}}' class='bwTabContent'>
-                                        <p>
-                                            {% if bwCompList[mode]['compkd'][0] > 100000 %}
-                                                <span class="almost"><b>infinite</b></span> K/D
-                                            {% elif bwCompList[mode]['compkd'][0] > 0 %}
-                                                <span class="dark_green"><b>{{bwCompList[mode]['compkd'][0] | abs }}</b></span> higher K/D (<span class="dark_green">+{{bwCompList[mode]['compkd'][1]}}%</span>)
-                                            {% else %}
-                                                <span class="red"><b>{{bwCompList[mode]['compkd'][0] | abs}}</b></span> lower K/D (<span class="red">{{bwCompList[mode]['compkd'][1]}}%</span>)
-                                            {% endif %}
-                                            •
-                                            {% if bwCompList[mode]['compfkd'][0] > 100000 %}
-                                                <span class="almost"><b>infinite</b></span> final K/D
-                                            {% elif bwCompList[mode]['compfkd'][0] > 0 %}
-                                                <span class="dark_green"><b>{{bwCompList[mode]['compfkd'][0]| abs}}</b></span> higher final K/D (<span class="dark_green">+{{bwCompList[mode]['compfkd'][1]}}%</span>)
-                                            {% else %}
-                                                <span class="red"><b>{{bwCompList[mode]['compfkd'][0]| abs}}</b></span> lower final K/D (<span class="red">{{bwCompList[mode]['compfkd'][1]}}%</span>)
-                                            {% endif %}
-                                            •
-                                            {% if bwCompList[mode]['compwl'][0] > 100000 %}
-                                                <span class="almost"><b>infinite</b></span> W/L
-                                            {% elif bwCompList[mode]['compwl'][0] > 0 %}
-                                                <span class="dark_green"><b>{{bwCompList[mode]['compwl'][0]| abs}}</b></span> higher W/L (<span class="dark_green">+{{bwCompList[mode]['compwl'][1]}}%</span>)
-                                            {% else %}
-                                                <span class="red"><b>{{bwCompList[mode]['compwl'][0]| abs}}</b></span> lower W/L (<span class="red">{{bwCompList[mode]['compwl'][1]}}%</span>)
-                                            {% endif %}
-                                        </p>
-                    
-                                        <p>
-                                            {{ bwModeStats[mode]['kills_bedwars'][0]| those }} kills ({{ bwModeStats[mode]['kills_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['deaths_bedwars'][0]| those }} deaths ({{ bwModeStats[mode]['deaths_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['K/D'] }} K/D <br>
-                                            {{ bwModeStats[mode]['final_kills_bedwars'][0]| those }} final kills ({{ bwModeStats[mode]['final_kills_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['final_deaths_bedwars'][0]| those }} final deaths ({{ bwModeStats[mode]['final_deaths_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['finK/D'] }} final K/D<br>
-                                            {{ bwModeStats[mode]['K/FD'] }} kills/final deaths<br>
-                                            {{ bwModeStats[mode]['FK/D'] }} final kills/deaths<br>
-                                            {{ bwModeStats[mode]['games_played_bedwars'][0]| those }} games played ({{ bwModeStats[mode]['games_played_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['winstreak'][0]| those }} winstreak<br>
-                                            {{ bwModeStats[mode]['wins_bedwars'][0]| those }} wins ({{ bwModeStats[mode]['wins_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['losses_bedwars'][0]| those }} losses ({{ bwModeStats[mode]['losses_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['W/L'] }} W/L<br>
-                                            {{ bwModeStats[mode]['winrate'] }}% win rate<br>
-                                            {{ bwModeStats[mode]['beds_broken_bedwars'][0]| those }} beds broken ({{ bwModeStats[mode]['beds_broken_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['beds_lost_bedwars'][0]| those }} beds lost ({{ bwModeStats[mode]['beds_lost_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['B/L'] }} bed break/lose ratio <br>
-                                            {{ bwModeStats[mode]['_items_purchased_bedwars'][0]| those}} items purchased ({{ bwModeStats[mode]['_items_purchased_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['purc/game']}} items purchased per game <br>
-                                            {{ bwModeStats[mode]['resc/game']}} resources collected per game <br>
-                                            {{ bwModeStats[mode]['resources_collected_bedwars'][0]| those}} resources collected ({{ bwModeStats[mode]['resources_collected_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['iron_resources_collected_bedwars'][0]| those }} iron collected ({{ bwModeStats[mode]['iron_resources_collected_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['gold_resources_collected_bedwars'][0]| those }} gold collected ({{ bwModeStats[mode]['gold_resources_collected_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['diamond_resources_collected_bedwars'][0]| those }} diamonds collected ({{ bwModeStats[mode]['diamond_resources_collected_bedwars'][1]}}%) <br>
-                                            {{ bwModeStats[mode]['emerald_resources_collected_bedwars'][0]| those }} emeralds collected ({{ bwModeStats[mode]['emerald_resources_collected_bedwars'][1]}}%) <br>
-                                        </p>
-                                    </div>
+                                    <button class="bwTabLinks text-2xl text-gray-600 font-bold leading-none p-1 mb-2 rounded-lg bg-gray-200 focus:bg-gray-300 focus:outline-none hover:bg-gray-300" onclick="bwTabs(event, '{{mode}}')" id="defaultOpenBw">{{bwTranslateList[mode]}}</button><br>
                                 {% endif %}
                             {% endfor %}
                         </div>
-                    {% else %}
-                    <p>No stats to show!</p>
-                    {% endif %}
-                </div>
+                        {% for mode in bwModeStats %}
+                            {% if bwModeStats[mode]['games_played_bedwars'][0] > 0 %}
+                                <div id='{{mode}}' class='bwTabContent'>
+                                    <p>
+                                        {% if bwCompList[mode]['compkd'][0] > 100000 %}
+                                            <span class="almost"><b>infinite</b></span> K/D
+                                        {% elif bwCompList[mode]['compkd'][0] > 0 %}
+                                            <span class="dark_green"><b>{{bwCompList[mode]['compkd'][0] | abs }}</b></span> higher K/D (<span class="dark_green">+{{bwCompList[mode]['compkd'][1]}}%</span>)
+                                        {% else %}
+                                            <span class="red"><b>{{bwCompList[mode]['compkd'][0] | abs}}</b></span> lower K/D (<span class="red">{{bwCompList[mode]['compkd'][1]}}%</span>)
+                                        {% endif %}
+                                        •
+                                        {% if bwCompList[mode]['compfkd'][0] > 100000 %}
+                                            <span class="almost"><b>infinite</b></span> final K/D
+                                        {% elif bwCompList[mode]['compfkd'][0] > 0 %}
+                                            <span class="dark_green"><b>{{bwCompList[mode]['compfkd'][0]| abs}}</b></span> higher final K/D (<span class="dark_green">+{{bwCompList[mode]['compfkd'][1]}}%</span>)
+                                        {% else %}
+                                            <span class="red"><b>{{bwCompList[mode]['compfkd'][0]| abs}}</b></span> lower final K/D (<span class="red">{{bwCompList[mode]['compfkd'][1]}}%</span>)
+                                        {% endif %}
+                                        •
+                                        {% if bwCompList[mode]['compwl'][0] > 100000 %}
+                                            <span class="almost"><b>infinite</b></span> W/L
+                                        {% elif bwCompList[mode]['compwl'][0] > 0 %}
+                                            <span class="dark_green"><b>{{bwCompList[mode]['compwl'][0]| abs}}</b></span> higher W/L (<span class="dark_green">+{{bwCompList[mode]['compwl'][1]}}%</span>)
+                                        {% else %}
+                                            <span class="red"><b>{{bwCompList[mode]['compwl'][0]| abs}}</b></span> lower W/L (<span class="red">{{bwCompList[mode]['compwl'][1]}}%</span>)
+                                        {% endif %}
+                                    </p>
+                
+                                    <div class='grid grid-cols-2'>
+                                        <div>
+                                            <p>
+                                                {{ bwModeStats[mode]['kills_bedwars'][0]| those }} kills ({{ bwModeStats[mode]['kills_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['deaths_bedwars'][0]| those }} deaths ({{ bwModeStats[mode]['deaths_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['K/D'] }} K/D <br>
+                                                {{ bwModeStats[mode]['final_kills_bedwars'][0]| those }} final kills ({{ bwModeStats[mode]['final_kills_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['final_deaths_bedwars'][0]| those }} final deaths ({{ bwModeStats[mode]['final_deaths_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['finK/D'] }} final K/D<br>
+                                                {{ bwModeStats[mode]['K/FD'] }} kills/final deaths<br>
+                                                {{ bwModeStats[mode]['FK/D'] }} final kills/deaths<br>
+                                            </p>
+                                            <p>
+                                                {{ bwModeStats[mode]['iron_resources_collected_bedwars'][0]| those }} iron collected ({{ bwModeStats[mode]['iron_resources_collected_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['gold_resources_collected_bedwars'][0]| those }} gold collected ({{ bwModeStats[mode]['gold_resources_collected_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['diamond_resources_collected_bedwars'][0]| those }} diamonds collected ({{ bwModeStats[mode]['diamond_resources_collected_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['emerald_resources_collected_bedwars'][0]| those }} emeralds collected ({{ bwModeStats[mode]['emerald_resources_collected_bedwars'][1]}}%) <br>
+                                            </p>
+                                        </div>
+                                        <div>
+                                            <p>
+                                                {{ bwModeStats[mode]['games_played_bedwars'][0]| those }} games played ({{ bwModeStats[mode]['games_played_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['winstreak'][0]| those }} winstreak<br>
+                                                {{ bwModeStats[mode]['W/L'] }} W/L<br>
+                                                {{ bwModeStats[mode]['winrate'] }}% win rate<br>
+                                                {{ bwModeStats[mode]['wins_bedwars'][0]| those }} wins ({{ bwModeStats[mode]['wins_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['losses_bedwars'][0]| those }} losses ({{ bwModeStats[mode]['losses_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['beds_broken_bedwars'][0]| those }} beds broken ({{ bwModeStats[mode]['beds_broken_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['beds_lost_bedwars'][0]| those }} beds lost ({{ bwModeStats[mode]['beds_lost_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['B/L'] }} bed break/lose ratio <br>
+                                            </p>
+                                            
+                                            <p>
+                                                {{ bwModeStats[mode]['_items_purchased_bedwars'][0]| those}} items purchased ({{ bwModeStats[mode]['_items_purchased_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['resources_collected_bedwars'][0]| those}} resources collected ({{ bwModeStats[mode]['resources_collected_bedwars'][1]}}%) <br>
+                                                {{ bwModeStats[mode]['purc/game']}} items purchased per game <br>
+                                                {{ bwModeStats[mode]['resc/game']}} resources collected per game <br>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                {% else %}
+                <p>No stats to show!</p>
+                {% endif %}
             </div>
 
             <!-- Kills via -->
