--- a/templates/index.html
+++ b/templates/index.html
@@ -1,102 +1,94 @@
-<html>
-{% block head %}
-<head>
-	<title>tiramisu - Hypixel Player Stats Analysis & Name History</title>
-{% endblock %}
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
-</head>
+<body class='flex flex-col min-h-screen'>
+	<head>
+	{% block head %}
+		<title>tiramisu - Hypixel Player Stats Analysis & Name History</title>
+	{% endblock %}
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
+		<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
+		<div class="grid grid-cols-3 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow place-content-center">
+			<a href='/'><img class='h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
+			</a>
+			<form class='p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
+				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
+				<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
+					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
+				</button>
+			</form>
+			<div class="grid grid-cols-8">
+				<button class='h-auto col-start-2 col-span-2 focus:outline-none hover:text-gray-600'><a href="/about">About</a></button>
+				<button class='col-span-2 focus:outline-none hover:text-gray-600'>More text</button>
+				<button class='my-6 mx-2 col-start-7 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300'>🏁</button>
+				<button class="my-6 mx-2 focus:outline-none bg-gray-200 rounded-xl hover:bg-gray-300">🌞</button>
+			</div>
+		</div>
+	</head>
 
-<div class="grid grid-cols-3 sticky top-0 bg-gray-100 mb-8 z-40 shadow place-content-center">
-	<a href='/'><img class='h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
-	</a>
-	<form class='p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
-		<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
-		<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
-			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
-		</button>
-	</form>
-	<div class="grid grid-cols-4">
-		<button class=''>Text button</button>
-		<button class=''>More text</button>
-		<button class=''>🏁</button>
-		<button class="">🌞</button>
-	</div>
-</div>
+	{% block content %}
+	<main class='flex-grow'>
+		<h2>Player Counts</h2>
+		<table id='table_id' class='tabbol'>
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Game</th>
+					<th>Player Count</th>
+					<th>Portion</th>
+				</tr>
+			</thead>
+			<tbody>
+				<td><span class='red'><b></b></span></td>
+				<td><span class='red'>Total Players</span></td>
+				<td><span class='red'>{{ '{0:,}'.format(totalPlayers) }}</span></td>
+				{% for dictitem in gameDict %}
+				<tr>
+					{% if dictitem['game'] == 'Main Lobby' %}
+						<td><span class='dark_red'><b>{{ dictitem['pos'] }}</b></span></td>
+						<td><span class='dark_red'>{{ dictitem['game'] }}</span></td>
+						<td><span class='dark_red'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+						<td><span class='dark_red'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
+					{% elif dictitem['game'] == 'Watching a replay' %}
+						<td><span class='cyan'><b>{{ dictitem['pos'] }}</b></span></td>
+						<td><span class='cyan'>{{ dictitem['game'] }}</span></td>
+						<td><span class='cyan'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+						<td><span class='cyan'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
+					{% elif dictitem['game'] == 'In limbo' %}
+						<td><span class='dark_green'><b>{{ dictitem['pos'] }}</b></span></td>
+						<td><span class='dark_green'>{{ dictitem['game'] }}</span></td>
+						<td><span class='dark_green'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+						<td><span class='dark_green'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
+					{% elif dictitem['game'] == 'Idle' %}
+						<td><span class='gold'><b>{{ dictitem['pos'] }}</b></span></td>
+						<td><span class='gold'>{{ dictitem['game'] }}</span></td>
+						<td><span class='gold'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
+						<td><span class='gold'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
+					{% else %}
+						<td>{{ dictitem['pos'] }}</td>
+						<td>{{ dictitem['game'] }}</td>
+						<td>{{ '{0:,}'.format(dictitem['playerCount']) }}</td>
+						<td>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</td>
+					{% endif %}
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h2>Welcome to <b>tiramisu</b>!</h2>
+		<p>Welcome to tiramisu. Lorem ipsum some dumb BS here. I was made by floraphile in 2021, something about Visual Studio Code, which is a software created by Microsoft somewhere after 2015. Wikipedia might have a good article on it, but I'm not sure, because I didn't look it up. This is just filler text. I don't even know if this is going to wrap correctly.</p>
+	</main>
+	{% endblock %}
 
-{% block content %}
-<div class='h2d'>
-	<h2>Player Counts</h2>
-</div>
-<body>
-	<table id='table_id' class='tabbol'>
-		<thead>
-			<tr>
-				<th>#</th>
-				<th>Game</th>
-				<th>Player Count</th>
-				<th>Portion</th>
-			</tr>
-		</thead>
-		<tbody>
-			<td><span class='red'><b></b></span></td>
-			<td><span class='red'>Total Players</span></td>
-			<td><span class='red'>{{ '{0:,}'.format(totalPlayers) }}</span></td>
-			{% for dictitem in gameDict %}
-			<tr>
-				{% if dictitem['game'] == 'Main Lobby' %}
-					<td><span class='dark_red'><b>{{ dictitem['pos'] }}</b></span></td>
-					<td><span class='dark_red'>{{ dictitem['game'] }}</span></td>
-					<td><span class='dark_red'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-					<td><span class='dark_red'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
-				{% elif dictitem['game'] == 'Watching a replay' %}
-					<td><span class='cyan'><b>{{ dictitem['pos'] }}</b></span></td>
-					<td><span class='cyan'>{{ dictitem['game'] }}</span></td>
-					<td><span class='cyan'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-					<td><span class='cyan'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
-				{% elif dictitem['game'] == 'In limbo' %}
-					<td><span class='dark_green'><b>{{ dictitem['pos'] }}</b></span></td>
-					<td><span class='dark_green'>{{ dictitem['game'] }}</span></td>
-					<td><span class='dark_green'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-					<td><span class='dark_green'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
-				{% elif dictitem['game'] == 'Idle' %}
-					<td><span class='gold'><b>{{ dictitem['pos'] }}</b></span></td>
-					<td><span class='gold'>{{ dictitem['game'] }}</span></td>
-					<td><span class='gold'>{{ '{0:,}'.format(dictitem['playerCount']) }}</span></td>
-					<td><span class='gold'>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</span></td>
-				{% else %}
-					<td>{{ dictitem['pos'] }}</td>
-					<td>{{ dictitem['game'] }}</td>
-					<td>{{ '{0:,}'.format(dictitem['playerCount']) }}</td>
-					<td>{{ (100*dictitem['playerCount'] / totalPlayers)|round(3) }}%</td>
-				{% endif %}
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-</body>
-<div class='h2d'>
-	<h2>Welcome to <b>tiramisu</b>!</h2>
-</div>
-
-<div class='paragraphd'>
-<p>Welcome to tiramisu. Lorem ipsum some dumb BS here. I was made by floraphile in 2021, something about Visual Studio Code, which is a software created by Microsoft somewhere after 2015. Wikipedia might have a good article on it, but I'm not sure, because I didn't look it up. This is just filler text. I don't even know if this is going to wrap correctly.</p>
-</div>
-{% endblock %}
-
-{% block footer %}
-<footer>
+	{% block footer %}
+	<footer class='w-full bg-gray-100 shadow-md mt-5 py-8'>
 		<p>tiramisu <b>v0.4.0.4δ "delta" (Testing Phase)</b> - April 2, 2021 · Flask <b>v1.1.2</b> · Python <b>v3.7.9</b><p>
-	<p>Copyright © 2021 <a style='text-decoration:none;color:rgb(205, 248, 227);' href='/p/floraphile'>floraphile</a>. All rights reserved. Terms of Service. Privacy Policy. Credits. All times are in PDT.</p>
-</footer>
-{% endblock %}
-</html>
+		<p>Copyright © 2021 <a class='no-underline text-gray-500' href='/p/floraphile'>floraphile</a>. All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. All times are in PDT.</p>
+	</footer>
+	{% endblock %}
+</body>
