--- a/static/base.scss
+++ b/static/base.scss
@@ -16,7 +16,7 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-* {font-family:'Inconsolata'; line-height: 1.15;}
+* {font-family:'Inconsolata'; line-height: 1.15;box-sizing:border-box}
 p {padding-top:0.35rem;padding-bottom:0.35rem}
 
 // ? Keeping these for now
@@ -42,6 +42,27 @@ input:-webkit-autofill:active
 #inputId:-webkit-autofill {
   background-color: transparent !important;
 }
+
+// ? Table of Contents
+html {scroll-behavior:smooth}
+.main>nav{position:sticky;top:8rem;align-self:start}
+.section-nav li.active>a{color:#333;font-weight:500}
+.section-nav{padding-left:0;border-left:0.2rem solid #ccc;margin-left:0.75rem;}
+.section-nav a{text-decoration:none;display:block;padding:.125rem 0;color:#ccc;transition:all 50ms ease-in-out}
+.section-nav a:hover,.section-nav a:focus{color:#666}
+
+.mapscag::before {
+  display: block; 
+  content: " "; 
+  margin-top: -285px; 
+  height: 285px; 
+  visibility: hidden; 
+  pointer-events: none;
+}
+
+ul,ol{list-style:none;margin:0;padding:0}
+li{margin-left:1rem}
+h1{font-weight:300}
 
 // ? Colors for namehis links
 // a{color:royalblue}
