--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<html>
 <body class='flex flex-col min-h-screen'>
 	<head>
 	{% block head %}
@@ -14,6 +15,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 		<div class="grid grid-cols-3 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow place-content-center">
 			<a href='/'><img class='h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
 			</a>
@@ -92,3 +94,4 @@
 	</footer>
 	{% endblock %}
 </body>
+</html>
